--- a/wp-content/themes/travelsite/style.css
+++ b/wp-content/themes/travelsite/style.css
@@ -81,9 +81,18 @@ input:focus {
     position: relative;
 }
 /* header */
-.header {
+.header {}
+.header .nav-canvas{
     background-color: rgba(0, 0, 0, .70);
-    height: 73px;
+}
+
+@media only screen and (min-width: 768px) {
+    .header .nav-canvas{
+       position: absolute;
+       top:20px;
+       left: 0;
+       width: 100%;
+    }
 }
 /* logo */
 .logo {
@@ -142,6 +151,13 @@ input:focus {
 		line-height: 73px;
 		height: 100%;
 	}
+}
+
+.featured-image {
+    height: 300px;
+    width: 100%;
+    background-size: cover;
+    background-attachment: fixed;
 }
 /* sidebar */
 .sidebar {}
