--- a/wp-content/themes/travelsite/style.css
+++ b/wp-content/themes/travelsite/style.css
@@ -167,7 +167,18 @@ input:focus {
 /*------------------------------------*\
     PAGES
 \*------------------------------------*/
-
+/* page-about */
+.photo {
+    display: block;
+    float: left;
+    width: auto;
+    margin: 0 0 27px 30px;
+    padding: 10px 15px 10px 10px;
+    background-color: #fff;
+    box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+}
 /*------------------------------------*\
     IMAGES
 \*------------------------------------*/
