--- a/wp-content/themes/travelsite/style.css
+++ b/wp-content/themes/travelsite/style.css
@@ -30,8 +30,8 @@ html {
     font-size: 62.5%;
 }
 body {
-    font: 300 11px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #444;
+    font: 300 14px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #000000;
 }
 /* clear */
 .clear:after,
@@ -124,6 +124,7 @@ input:focus {
 }
 .nav ul li {
     padding: 12px 0;
+    text-align: center;
 }
 .nav ul li.current_page_item{
 	background-color: #df7900;
@@ -167,7 +168,23 @@ input:focus {
 /*------------------------------------*\
     PAGES
 \*------------------------------------*/
+h2{
+    font-size: 30px;
+    font-size: 3.0rem;
+    font-weight: normal;
+    color: #df7900;
+    text-align: center;
+    background-image: url(img/titleBG.png);
+    background-position: center center;
+    background-repeat: repeat-x;
+
+}
+h2 span{
+    padding: 0 35px;
+    background: #ffffff;
+}
 /* page-about */
+
 .photo {
     display: block;
     float: left;
@@ -178,7 +195,43 @@ input:focus {
     box-shadow: 0 3px 6px rgba(0,0,0,.25);
     -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
     -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    transform: rotate(-10deg);
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
 }
+.photo:nth-child(even){
+    transform: rotate(10deg);
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    margin-top: -80px;
+}
+.photo-img{
+    box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    width: 100%;
+    height: auto;
+}
+
+/* GRID */
+[class*='grid']{
+    float: left;
+    position: relative;
+    padding: 0 20px 0 0;
+}
+
+.omega{
+    padding-right: 0;
+}
+@media only screen and (min-width: 768px) {
+    .grid2-3{
+        width: 66.6%;
+    }
+    .grid1-3{
+        width: 33.3%;
+    }
+}
+
 /*------------------------------------*\
     IMAGES
 \*------------------------------------*/
