--- a/wp-content/themes/travelsite/style.css
+++ b/wp-content/themes/travelsite/style.css
@@ -212,10 +212,64 @@ h2 span{
     width: 100%;
     height: auto;
 }
-
+/* page-tours */
+ul.tours{
+    list-style: none;
+    padding: 0;
+}
+ul.tours li{
+    margin: 0 auto 20px 0;
+}
+ul.tours li h3{
+    margin: 5px 0;
+    font-size: 20px;
+    font-size: 2.0rem;
+}
+ul.tours li a{
+    color: #df7900;
+}
+ul.tours li .featured-tour{
+    position: relative;
+}
+ul.tours li .featured-tour .more-info{
+    position: absolute;
+    top: 15px;
+    right: -12px;
+    width: 112px;
+}
+.date-price p.date{
+    float: left;
+    width: 60%;
+    font-size: 14px;
+    font-size: 1.4rem;
+    color: #4c4c4c;
+    font-weight: bold;
+    margin: 5px 0;
+}
+.date-price p.price{
+    float: right;
+    width: 30%;
+    text-align: right;
+    color: #df7900;
+    font-size: 16px;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin: 5px 0;
+}
+.tour-description ul li{
+    list-style: none;
+}
+.tour-description ul li::before{
+    content: '-';
+    position: relative;
+    left: -5px;
+}
+.tour-description ul li{
+    text-indent: -30px;
+    margin: 0;
+}
 /* GRID */
 [class*='grid']{
-    float: left;
     position: relative;
     padding: 0 20px 0 0;
 }
@@ -224,11 +278,18 @@ h2 span{
     padding-right: 0;
 }
 @media only screen and (min-width: 768px) {
+    [class*='grid']{
+        float: left;
+    }
+
     .grid2-3{
         width: 66.6%;
     }
     .grid1-3{
         width: 33.3%;
+    }
+    .grid2-4{
+        width: 50%;
     }
 }
 
